--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,4 @@
 theme: jekyll-theme-slate
+title: UniSim
+description: A universe expansion simulator for classrooms.
 zip_url: https://github.com/zachischeese/UniSIm/releases/download/1/UniSim.zip
